# IoT2025

./: Branch_jero.c  README.md  readme.md
lab_1/: CMakeLists.txt
lab_1/components/esp_rom_delay_ms/src/: esp_rom_delay_ms.c
lab_1/main/: main.c
lab_1/primera_parte/: CMakeLists.txt  build.cmd
lab_1/primera_parte/components/global_lib/: CMakeLists.txt  Untitled-1.c  global.c
lab_1/primera_parte/components/global_lib/include/: global.h
lab_1/primera_parte/src/: main.c
lab_c/primera_parte/: CMakeLists.txt  build.py
lab_c/primera_parte/components/global_lib/: CMakeLists.txt  global.c
lab_c/primera_parte/components/global_lib/include/: global.h
lab_c/primera_parte/src/: main.c
lab_c/segunda_parte/: CMakeLists.txt
lab_c/segunda_parte/components/student_lib/: CMakeLists.txt  student.c
lab_c/segunda_parte/components/student_lib/include/: student.h
lab_c/segunda_parte/src/: main.c
